testing and improve ajaxs

--- a/unit 4 ajaxes/2.html
+++ b/unit 4 ajaxes/2.html
@@ -23,7 +23,8 @@
 
             try {
                 // Make the API request
-                let response = await fetch("https://jsonplaceholder.typicode.com/posts/1"); // Example API
+                // let response = await fetch("https://jsonplaceholder.typicode.com/posts/1"); // Example API
+                let response = await fetch("testing.json"); // Example API
 
                 // Check if the request was successful
                 if (!response.ok) {
