--- a/unit 4 ajaxes/6.html
+++ b/unit 4 ajaxes/6.html
@@ -9,14 +9,28 @@
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
+            background-color: #16191d;
+            color: #ffffff;
         }
 
         #message {
             margin-top: 20px;
             padding: 10px;
+            backdrop-filter: blur(5px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 12px;
             border: 1px solid #ccc;
             width: fit-content;
             display: none;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #30353d;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
         .success {
